trying to fix background on mobile for project 2

--- a/assets/css/ccstyle.css
+++ b/assets/css/ccstyle.css
@@ -1,5 +1,5 @@
 body {
-	background: url(../images/caveBackground.jpg) no-repeat center;
+	background: url(../images/caveBackground.jpg) center;
 }
 .crystals {
 	width:200px;
